Only reveal top poll by default.

--- a/www/index.html
+++ b/www/index.html
@@ -97,7 +97,7 @@
 </div>
 
 <script type="text/html" id="poll-template">
-<div data-role="collapsible" data-collapsed="false" class="poll">
+<div data-role="collapsible" class="poll">
   <h2 data-bind="text: poll_name"></h2>
 
   <div data-bind="ifnot: haveIVoted">
