--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 <script src="cordova.js"></script>
 <script src="js/all.min.js"></script>
 
-<div data-role="page" class="not-setup">
+<div data-role="page" class="not-setup" id="index">
 
   <div data-role="panel" id="vt-panel" data-display="overlay" data-position="right">
     <form data-bind="submit: enterRoom">
@@ -36,69 +36,78 @@
   </div>
 
   <div role="main" class="ui-content">
-    <div class="setup-area">
-      <form data-bind="submit: setup">
-        <label for="setup-name">What is your name?</label>
-        <input id="setup-name" type="text" maxlength="20" data-clear-btn="true" required data-bind="value: me.name">
-        <label for="setup-room">What room do you want to go to?</label>
-        <input id="setup-room" type="text" maxlength="20" data-clear-btn="true" placeholder="Room name" required data-bind="value: room">
-        <button data-theme="b">Enter</button>
-      </form>
-    </div>
-    <div class="poll-and-votes-area">
-      <div class="new-poll-area" data-role="collapsible">
-        <h2>New Poll</h2>
-
-        <form data-bind="submit: createPoll">
-          <label for="new-vote-name">Name</label>
-          <input id="new-vote-name" type="text" maxlength="20" data-clear-btn="true">
-
-          <div data-role="tabs" id="tabs">
-            <div data-role="navbar" class="poll-type-select">
-              <ul>
-                <li>
-                  <a href="#poll-type-item-choice" data-poll-type="item-choice" data-ajax="false" class="ui-btn-active">Item
-                    Choice</a></li>
-                <li><a href="#poll-type-range" data-poll-type="range" data-ajax="false">Range</a></li>
-              </ul>
-            </div>
-            <div id="poll-type-item-choice">
-              <label for="new-item-choice" class="ui-hidden-accessible">New Item</label>
-              <input id="new-item-choice" type="text" maxlength="20" data-clear-btn="true" placeholder="New Item">
-              <button id="add-item-choice">Add Item</button>
-              <ol data-role="listview" class="item-choices" data-inset="true"></ol>
-            </div>
-            <div id="poll-type-range">
-              <div class="ui-grid-b">
-                <div class="ui-block-a">
-                  <div class="ui-field-contain">
-                    <label for="new-vote-min">Min</label>
-                    <input id="new-vote-min" type="number" step="any">
-                  </div>
-                </div>
-                <div class="ui-block-b">
-                  <div class="ui-field-contain">
-                    <label for="new-vote-max">Max</label>
-                    <input id="new-vote-max" type="number" step="any">
-                  </div>
-                </div>
-                <div class="ui-block-c">
-                  <div class="ui-field-contain">
-                    <label for="new-vote-step">Step</label>
-                    <input id="new-vote-step" type="number" step="any">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <button data-theme="b">Create Poll</button>
-        </form>
-      </div>
-      <div data-bind="template: {name: 'poll-template', foreach: polls, afterAdd: jqmEnhancePollList}"></div>
-    </div>
+    <!-- ko if: isSetup -->
+    <div data-bind="template: {name: 'poll-area-template', afterRender: jqmRefreshSetup}"></div>
+    <!-- /ko -->
+    <!-- ko ifnot: isSetup -->
+    <div data-bind="template: {name: 'setup-template', afterRender: jqmRefreshSetup}"></div>
+    <!-- /ko -->
   </div>
 
 </div>
+
+<script type="text/html" id="setup-template">
+<form data-bind="submit: setup">
+  <label for="setup-name">What is your name?</label>
+  <input id="setup-name" type="text" maxlength="20" data-clear-btn="true" required data-bind="value: me.name">
+  <label for="setup-room">What room do you want to go to?</label>
+  <input id="setup-room" type="text" maxlength="20" data-clear-btn="true" placeholder="Room name" required data-bind="value: room">
+  <button data-theme="b">Enter</button>
+</form>
+</script>
+
+
+<script type="text/html" id="poll-area-template">
+<div class="new-poll-area" data-role="collapsible">
+  <h2>New Poll</h2>
+
+  <form data-bind="submit: createPoll">
+    <label for="new-vote-name">Name</label>
+    <input id="new-vote-name" type="text" maxlength="20" data-clear-btn="true">
+
+    <div data-role="tabs" id="tabs">
+      <div data-role="navbar" class="poll-type-select">
+        <ul>
+          <li>
+            <a href="#poll-type-item-choice" data-poll-type="item-choice" data-ajax="false" class="ui-btn-active">Item
+              Choice</a></li>
+          <li><a href="#poll-type-range" data-poll-type="range" data-ajax="false">Range</a></li>
+        </ul>
+      </div>
+      <div id="poll-type-item-choice">
+        <label for="new-item-choice" class="ui-hidden-accessible">New Item</label>
+        <input id="new-item-choice" type="text" maxlength="20" data-clear-btn="true" placeholder="New Item">
+        <button id="add-item-choice">Add Item</button>
+        <ol data-role="listview" class="item-choices" data-inset="true"></ol>
+      </div>
+      <div id="poll-type-range">
+        <div class="ui-grid-b">
+          <div class="ui-block-a">
+            <div class="ui-field-contain">
+              <label for="new-vote-min">Min</label>
+              <input id="new-vote-min" type="number" step="any">
+            </div>
+          </div>
+          <div class="ui-block-b">
+            <div class="ui-field-contain">
+              <label for="new-vote-max">Max</label>
+              <input id="new-vote-max" type="number" step="any">
+            </div>
+          </div>
+          <div class="ui-block-c">
+            <div class="ui-field-contain">
+              <label for="new-vote-step">Step</label>
+              <input id="new-vote-step" type="number" step="any">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <button data-theme="b">Create Poll</button>
+  </form>
+</div>
+<div data-bind="template: {name: 'poll-template', foreach: polls, afterAdd: jqmEnhancePollList}"></div>
+</script>
 
 <script type="text/html" id="poll-template">
 <div data-role="collapsible" class="poll">
