ko for new range poll bits.

--- a/www/index.html
+++ b/www/index.html
@@ -62,8 +62,8 @@
   <h2>New Poll</h2>
 
   <form data-bind="submit: createPoll">
-    <label for="new-vote-name">Name</label>
-    <input id="new-vote-name" type="text" maxlength="20" data-clear-btn="true">
+    <label for="new-poll-name">Name</label>
+    <input id="new-poll-name" type="text" maxlength="20" data-clear-btn="true" placeholder="Poll Name" required data-bind="value: newPollName">
 
     <div data-role="tabs" id="tabs">
       <div data-role="navbar" class="poll-type-select">
@@ -84,20 +84,20 @@
         <div class="ui-grid-b">
           <div class="ui-block-a">
             <div class="ui-field-contain">
-              <label for="new-vote-min">Min</label>
-              <input id="new-vote-min" type="number" step="any">
+              <label for="new-poll-min">Min</label>
+              <input id="new-poll-min" type="number" step="any" data-bind="value: newPollMin">
             </div>
           </div>
           <div class="ui-block-b">
             <div class="ui-field-contain">
-              <label for="new-vote-max">Max</label>
-              <input id="new-vote-max" type="number" step="any">
+              <label for="new-poll-max">Max</label>
+              <input id="new-poll-max" type="number" step="any" data-bind="value: newPollMax">
             </div>
           </div>
           <div class="ui-block-c">
             <div class="ui-field-contain">
-              <label for="new-vote-step">Step</label>
-              <input id="new-vote-step" type="number" step="any">
+              <label for="new-poll-step">Step</label>
+              <input id="new-poll-step" type="number" step="any" data-bind="value: newPollStep">
             </div>
           </div>
         </div>
