--- a/www/index.html
+++ b/www/index.html
@@ -77,8 +77,10 @@
       <div id="poll-type-item-choice">
         <label for="new-item-choice" class="ui-hidden-accessible">New Item</label>
         <input id="new-item-choice" type="text" maxlength="20" data-clear-btn="true" placeholder="New Item">
-        <button id="add-item-choice">Add Item</button>
-        <ol data-role="listview" class="item-choices" data-inset="true"></ol>
+        <button type="button" data-bind="click: addItem">Add Item</button>
+        <ol data-role="listview" data-inset="true" data-bind="foreach: items, jqmRefreshList: items">
+          <li data-bind="text: $data"></li>
+        </ol>
       </div>
       <div id="poll-type-range">
         <div class="ui-grid-b">
@@ -166,7 +168,7 @@
       <tbody data-bind="foreach: votes">
       <tr>
         <td data-bind="text: name"></td>
-        <td class="num" data-bind="text: $parent.haveIVoted() ? vote : '?'"></td>
+        <td class="right" data-bind="text: $parent.haveIVoted() ? vote : '?'"></td>
       </tr>
       </tbody>
     </table>
