--- a/www/index.html
+++ b/www/index.html
@@ -81,7 +81,7 @@
         <input id="new-item-choice" type="text" maxlength="20" data-clear-btn="true" placeholder="New Item" data-bind="value: newItemInput">
         <button type="button" data-bind="click: addItem">Add Item</button>
         <ol data-role="listview" data-inset="true" data-bind="foreach: items, jqmRefreshList: items">
-          <li data-bind="text: $data"></li>
+          <li data-icon="delete"><a href="#" data-bind="text: $data, click: $root.removeItem"></a></li>
         </ol>
       </div>
       <div id="poll-type-range">
