Split button for deleting items.

--- a/www/index.html
+++ b/www/index.html
@@ -80,8 +80,11 @@
         <label for="new-item-choice" class="ui-hidden-accessible">New Item</label>
         <input id="new-item-choice" type="text" maxlength="20" data-clear-btn="true" placeholder="New Item" data-bind="value: newItemInput">
         <button type="button" data-bind="click: addItem">Add Item</button>
-        <ol data-role="listview" data-inset="true" data-bind="foreach: items, jqmRefreshList: items">
-          <li data-icon="delete"><a href="#" data-bind="text: $data, click: $root.removeItem"></a></li>
+        <ol data-role="listview" data-split-icon="delete" data-inset="true" data-bind="foreach: items, jqmRefreshList: items">
+          <li>
+            <a href="#" data-bind="text: $data"></a>
+            <a href="#" data-bind="click: $root.removeItem">Delete Item</a>
+          </li>
         </ol>
       </div>
       <div id="poll-type-range">
