--- a/www/index.html
+++ b/www/index.html
@@ -181,9 +181,12 @@
 
   </div>
 
-  <!-- ko if: ownPoll -->
-  <button data-theme="b" data-bind="click: $parent.deletePollConfirm">Delete Poll</button>
-  <!-- /ko -->
+  <div data-role="controlgroup" data-type="horizontal">
+    <button data-theme="b" data-bind="click: $parent.rerunPoll">New Similar</button>
+    <!-- ko if: ownPoll -->
+    <button data-theme="b" data-bind="click: $parent.deletePollConfirm">Delete Poll</button>
+    <!-- /ko -->
+  </div>
 
 </div>
 </script>
