--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
   </div>
 
   <div data-role="header">
+    <a href="#" class="ui-btn-left" data-icon="refresh" data-iconpos="notext" data-role="button" data-bind="click: refresh"></a>
     <h1 data-bind="text: room() || 'Voting Thing'"></h1>
     <!-- ko if: isSetup -->
     <a href="#vt-panel" class="hamburger ui-btn-right" data-icon="bars" data-iconpos="notext" data-role="button"></a>
