Fix setup issues.

--- a/www/index.html
+++ b/www/index.html
@@ -65,7 +65,7 @@
   <label for="setup-name">What is your name?</label>
   <input id="setup-name" type="text" maxlength="20" data-clear-btn="true" required data-bind="value: me.name">
   <label for="setup-room">What room do you want to go to?</label>
-  <input id="setup-room" type="text" maxlength="20" data-clear-btn="true" placeholder="Room name" required data-bind="value: room">
+  <input id="setup-room" type="text" maxlength="20" data-clear-btn="true" placeholder="Room name" required data-bind="value: roomInput">
   <button data-theme="b">Enter</button>
 </form>
 </script>
