--- a/www/index.html
+++ b/www/index.html
@@ -125,7 +125,7 @@
     <button data-theme="b">Create Poll</button>
   </form>
 </div>
-<div data-bind="template: {name: 'poll-template', foreach: polls, afterAdd: jqmEnhancePollList}"></div>
+<div data-bind="template: {name: 'poll-template', foreach: polls}, jqmEnhancePollList: polls"></div>
 </script>
 
 <script type="text/html" id="poll-template">
