Try spinning refresh button while loading stuff.

--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <div data-role="header" data-position="fixed">
+  <div id="vt-header" data-role="header" data-position="fixed" class="vt-loading">
     <a href="#" class="ui-btn-left" data-icon="refresh" data-iconpos="notext" data-role="button" data-bind="click: refresh"></a>
     <h1 data-bind="text: room() || 'Voting Thing'"></h1>
     <!-- ko if: isSetup -->
