--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,7 @@
 
   <div id="vt-header" class="vt-synced" data-role="header" data-position="fixed">
     <a href="#" class="ui-btn-left" data-icon="refresh" data-iconpos="notext" data-role="button" data-bind="click: refresh"></a>
+
     <h1 data-bind="text: room() || 'Voting Thing'"></h1>
     <!-- ko if: isSetup -->
     <a href="#vt-panel" class="hamburger ui-btn-right" data-icon="bars" data-iconpos="notext" data-role="button"></a>
@@ -132,7 +133,7 @@
 <div data-role="collapsible" class="poll">
   <h2 data-bind="text: poll_name"></h2>
 
-  <div data-bind="ifnot: haveIVoted">
+  <div data-bind="if: !haveIVoted() && status() === 'open' ">
     <!-- ko if: type === 'range' -->
     <input name="vote-input" type="range" data-bind="attr: {value: details.min, min: details.min, max: details.max, step: details.step}">
     <!-- /ko -->
@@ -155,7 +156,7 @@
       <tbody data-bind="foreach: votes">
       <tr>
         <td data-bind="text: name"></td>
-        <td class="num" data-bind="text: $parent.haveIVoted() ? vote.toFixed($parent.details.decimals) : '?'"></td>
+        <td class="num" data-bind="text: $parent.haveIVoted() || $parent.status() === 'closed' ? vote.toFixed($parent.details.decimals) : '?'"></td>
       </tr>
       </tbody>
       <tfoot>
@@ -185,7 +186,7 @@
       <tbody data-bind="foreach: votes">
       <tr>
         <td data-bind="text: name"></td>
-        <td class="right" data-bind="text: $parent.haveIVoted() ? vote : '?'"></td>
+        <td class="right" data-bind="text: $parent.haveIVoted() || $parent.status() === 'closed' ? vote : '?'"></td>
       </tr>
       </tbody>
     </table>
@@ -197,6 +198,7 @@
     <button data-theme="b" data-bind="click: $parent.sharePoll">Share</button>
     <button data-theme="b" data-bind="click: $parent.rerunPoll">New Similar</button>
     <!-- ko if: ownPoll -->
+    <button data-theme="b" data-bind="click: $parent.closePollConfirm, visible: status() === 'open' && votes().length > 0">Close</button>
     <button data-theme="b" data-bind="click: $parent.deletePollConfirm">Delete</button>
     <!-- /ko -->
   </div>
