--- a/www/index.html
+++ b/www/index.html
@@ -21,11 +21,19 @@
   <!-- APP_EXCLUDE_END -->
 
   <div data-role="panel" id="vt-panel" data-display="overlay" data-position="right">
-    <form data-bind="submit: enterRoom">
-      <label for="room-input">Room</label>
-      <input id="room-input" type="text" maxlength="20" data-clear-btn="true" required data-bind="value: roomInput">
-      <button data-theme="b">Enter Room</button>
-    </form>
+    <div data-role="collapsible" data-collapsed="false">
+      <h2>Change Room</h2>
+
+      <form data-bind="submit: roomFormSubmit">
+        <label for="room-input" class="ui-hidden-accessible">Room</label>
+        <input id="room-input" type="text" maxlength="20" data-clear-btn="true" required data-bind="value: roomInput">
+        <button data-theme="b">Enter Room</button>
+      </form>
+      <br>
+      <ul data-role="listview" data-bind="foreach: prevRooms, jqmRefreshList: prevRooms">
+        <li><a href="#" data-bind="text: $data, click: $parent.goToRoom"></a></li>
+      </ul>
+    </div>
     <div data-role="collapsible" data-collapsed="false">
       <h2>Who's in the Room</h2>
       <ul data-role="listview" data-bind="foreach: people, jqmRefreshList: people">
@@ -198,7 +206,9 @@
     <button data-theme="b" data-bind="click: $parent.sharePoll">Share</button>
     <button data-theme="b" data-bind="click: $parent.rerunPoll">New Similar</button>
     <!-- ko if: ownPoll -->
-    <button data-theme="b" data-bind="click: $parent.closePollConfirm, visible: status() === 'open' && votes().length > 0">Close</button>
+    <button data-theme="b" data-bind="click: $parent.closePollConfirm, visible: status() === 'open' && votes().length > 0">
+      Close
+    </button>
     <button data-theme="b" data-bind="click: $parent.deletePollConfirm">Delete</button>
     <!-- /ko -->
   </div>
