--- a/www/index.html
+++ b/www/index.html
@@ -36,10 +36,10 @@
     </div>
     <div data-role="collapsible" data-collapsed="false">
       <h2>Who's in the Room</h2>
-      <ul data-role="listview" data-bind="foreach: people, jqmRefreshList: people">
+      <ul data-role="listview" data-bind="foreach: people.people, jqmRefreshList: people.people">
         <li data-icon="edit"><!-- data-bind="attr: {'data-icon1': is_me ? 'edit' : null}" -->
           <!-- ko if: is_me -->
-          <a data-bind="text: name, click: $parent.editName"></a>
+          <a data-bind="text: name, click: $parent.people.editName"></a>
           <!-- /ko -->
           <!-- ko ifnot: is_me -->
           <!--ko text: name--><!--/ko-->
