--- a/www/index.html
+++ b/www/index.html
@@ -153,7 +153,7 @@
       </div>
     </fieldset>
     <!-- /ko -->
-    <button data-theme="b" data-bind="click: $parent.vote">Send My Vote</button>
+    <button data-theme="b" data-bind="click: $parent.vote">Vote!</button>
   </div>
 
   <div data-bind="attr: {class: haveIVoted() ? 'voted' : 'not-voted'}">
