Working starring/unstarring rooms + notification of new polls.

--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,9 @@
   </div>
 
   <div id="vt-header" class="vt-synced" data-role="header" data-position="fixed">
+    <!-- APP_EXCLUDE_START -->
     <a href="#" class="ui-btn-left" data-icon="refresh" data-iconpos="notext" data-role="button" data-bind="click: refresh"></a>
+    <!-- APP_EXCLUDE_END -->
 
     <h1 data-bind="text: room() || 'Voting Thing'"></h1>
     <!-- ko if: isSetup -->
