Make optional description optional.

--- a/html/index.html
+++ b/html/index.html
@@ -96,7 +96,7 @@
     <label for="new-poll-name">Name</label>
     <input id="new-poll-name" type="text" maxlength="20" data-clear-btn="true" placeholder="Poll Name" required data-bind="value: createPoll.newPollName">
     <label for="new-poll-desc" class="ui-hidden-accessible">Description</label>
-    <textarea id="new-poll-desc" type="text" maxlength="256" data-clear-btn="true" placeholder="Optional Description" required data-bind="value: createPoll.newPollDesc"></textarea>
+    <textarea id="new-poll-desc" type="text" maxlength="256" data-clear-btn="true" placeholder="Optional Description" data-bind="value: createPoll.newPollDesc"></textarea>
 
     <div data-role="tabs" id="tabs">
       <div data-role="navbar" class="poll-type-select">
