--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
 <script src="cordova.js"></script>
 <script src="js/all.min.js"></script>
 
-<div data-role="page" id="index">
+<div data-theme="a" data-role="page" id="index">
 
   <!-- APP_EXCLUDE_START -->
   <div data-role="popup" data-history="false" id="share-popup" class="ui-corner-all">
@@ -20,14 +20,14 @@
   </div>
   <!-- APP_EXCLUDE_END -->
 
-  <div data-role="panel" id="vt-panel" data-display="overlay" data-position="right">
+  <div class="ui-alt-icon ui-nodisc-icon" data-role="panel" id="vt-panel" data-display="overlay" data-position="right">
     <div data-role="collapsible" data-collapsed="false">
       <h2>Change Room</h2>
 
       <form data-bind="submit: roomFormSubmit">
         <label for="room-input" class="ui-hidden-accessible">Room</label>
         <input id="room-input" type="text" maxlength="20" data-clear-btn="true" required data-bind="value: roomInput">
-        <button data-theme="b">Enter Room</button>
+        <button data-theme="b">Enter</button>
       </form>
       <br>
       <ul data-role="listview" data-bind="foreach: roomHistory.prevRooms, jqmRefreshList: roomHistory.prevRooms">
@@ -49,20 +49,22 @@
     </div>
   </div>
 
-  <div id="vt-header" class="vt-synced" data-role="header" data-position="fixed">
+  <div data-theme="b" id="vt-header" class="vt-synced ui-nodisc-icon" data-role="header" data-position="fixed">
+    <!-- ko if: isSetup -->
     <!-- WEB_EXCLUDE_START -->
     <div data-role="controlgroup" data-type="horizontal" class="ui-mini ui-btn-left">
       <a href="#" class="ui-btn ui-btn-icon-notext ui-icon-refresh" data-bind="click: refresh">Add</a>
-      <a href="#" class="ui-btn ui-btn-icon-notext ui-icon-star" data-bind="click: star, attr: {'data-theme': starStatus}">Up</a>
+      <a href="#" class="ui-btn ui-btn-icon-notext ui-icon-star" data-bind="click: star, css: {starred: starred()}">Up</a>
     </div>
     <!-- WEB_EXCLUDE_END -->
     <!-- APP_EXCLUDE_START -->
-    <a href="#" class="ui-btn-left" data-icon="refresh" data-iconpos="notext" data-role="button" data-bind="click: refresh"></a>
+    <a href="#" class="ui-btn ui-btn-left ui-btn-icon-notext ui-icon-refresh" data-bind="click: refresh">_</a>
     <!-- APP_EXCLUDE_END -->
+    <!-- /ko -->
 
     <h1 data-bind="text: room() || 'Voting Thing'"></h1>
     <!-- ko if: isSetup -->
-    <a href="#vt-panel" class="hamburger ui-btn-right" data-icon="bars" data-iconpos="notext" data-role="button"></a>
+    <a href="#vt-panel" class="hamburger ui-btn ui-btn-icon-notext ui-btn-right ui-icon-bars">_</a>
     <!-- /ko -->
   </div>
 
@@ -71,7 +73,7 @@
     <div data-bind="template: {name: 'poll-area-template', afterRender: jqmRefreshPollArea}"></div>
     <!-- /ko -->
     <!-- ko ifnot: isSetup -->
-    <div data-bind="template: {name: 'setup-template', afterRender: jqmRefreshSetup}"></div>
+    <div class="ui-alt-icon ui-nodisc-icon" data-bind="template: {name: 'setup-template', afterRender: jqmRefreshSetup}"></div>
     <!-- /ko -->
   </div>
 
@@ -81,7 +83,7 @@
 <form data-bind="submit: setup">
   <label for="setup-name">Your name</label>
   <input id="setup-name" type="text" maxlength="20" data-clear-btn="true" required data-bind="value: people.me.name">
-  <label for="setup-room">Voting room to create or go to</label>
+  <label for="setup-room">Voting room (create or go to)</label>
   <input id="setup-room" type="text" maxlength="20" data-clear-btn="true" placeholder="Room name" required data-bind="value: roomInput">
   <button data-theme="b">Enter</button>
 </form>
@@ -89,11 +91,11 @@
 
 
 <script type="text/html" id="poll-area-template">
-<div class="new-poll-area" data-role="collapsible">
+<div class="new-poll-area ui-alt-icon ui-nodisc-icon" data-role="collapsible">
   <h2>New Poll</h2>
 
   <form data-bind="submit: createPoll.createPoll">
-    <label for="new-poll-name">Name</label>
+    <label for="new-poll-name" class="ui-hidden-accessible">Name</label>
     <input id="new-poll-name" type="text" maxlength="20" data-clear-btn="true" placeholder="Poll Name" required data-bind="value: createPoll.newPollName">
     <label for="new-poll-desc" class="ui-hidden-accessible">Description</label>
     <textarea id="new-poll-desc" type="text" maxlength="256" data-clear-btn="true" placeholder="Optional Description" data-bind="value: createPoll.newPollDesc"></textarea>
@@ -149,7 +151,8 @@
 
 <script type="text/html" id="poll-template">
 <div data-role="collapsible" class="poll">
-  <h2 data-bind="text: poll_name"></h2>
+  <h2 class="ui-alt-icon ui-nodisc-icon" data-bind="text: poll_name"></h2>
+
   <p data-bind="text: description"></p>
 
   <div data-bind="if: !haveIVoted() && status() === 'open' ">
@@ -214,7 +217,7 @@
   </div>
 
   <form>
-    <fieldset data-role="controlgroup" data-type="horizontal">
+    <fieldset class="ui-alt-icon ui-nodisc-icon" data-role="controlgroup" data-type="horizontal">
       <button data-icon="mail" data-iconpos="notext" data-bind="click: $parent.sharePoll">Share</button>
       <button data-icon="edit" data-iconpos="notext" data-bind="click: $root.createPoll.rerunPoll">New Similar</button>
       <!-- ko if: ownPoll -->
