--- a/html/index.html
+++ b/html/index.html
@@ -218,13 +218,13 @@
 
   <form>
     <fieldset class="ui-alt-icon ui-nodisc-icon" data-role="controlgroup" data-type="horizontal">
-      <button data-icon="mail" data-iconpos="notext" data-bind="click: $parent.sharePoll">Share</button>
-      <button data-icon="edit" data-iconpos="notext" data-bind="click: $root.createPoll.rerunPoll">New Similar</button>
+      <button data-icon="share" data-iconpos="notext" data-bind="click: $parent.sharePoll">Share</button>
+      <button data-icon="copy" data-iconpos="notext" data-bind="click: $root.createPoll.rerunPoll">New Similar</button>
       <!-- ko if: ownPoll -->
       <button data-icon="lock" data-iconpos="notext" data-bind="click: closePollConfirm, visible: status() === 'open' && votes().length > 0">
         Close
       </button>
-      <button data-icon="delete" data-iconpos="notext" data-bind="click: deletePollConfirm">Delete</button>
+      <button data-icon="trash" data-iconpos="notext" data-bind="click: deletePollConfirm">Delete</button>
       <!-- /ko -->
     </fieldset>
   </form>
