--- a/html/index.html
+++ b/html/index.html
@@ -85,13 +85,15 @@
 </div>
 
 <script type="text/html" id="setup-template">
-<form data-bind="submit: setup">
-  <label for="setup-name">Your name</label>
-  <input id="setup-name" type="text" maxlength="20" data-clear-btn="true" required data-bind="value: people.me.name">
-  <label for="setup-room">Voting room (create or go to)</label>
-  <input id="setup-room" type="text" maxlength="20" data-clear-btn="true" placeholder="Room name" required data-bind="value: roomInput">
-  <button data-theme="b">Enter</button>
-</form>
+<div class="setup-area">
+  <form data-bind="submit: setup">
+    <label for="setup-name">Your name</label>
+    <input id="setup-name" type="text" maxlength="20" data-clear-btn="true" required data-bind="value: people.me.name">
+    <label for="setup-room">Voting room (create or go to)</label>
+    <input id="setup-room" type="text" maxlength="20" data-clear-btn="true" placeholder="Room name" required data-bind="value: roomInput">
+    <button data-theme="b">Enter</button>
+  </form>
+</div>
 </script>
 
 
