--- a/html/index.html
+++ b/html/index.html
@@ -234,7 +234,10 @@
       <button data-icon="share" data-iconpos="notext" data-bind="click: $parent.sharePoll">Share</button>
       <button data-icon="copy" data-iconpos="notext" data-bind="click: $root.createPoll.rerunPoll">New Similar</button>
       <!-- ko if: ownPoll -->
-      <button data-icon="lock" data-iconpos="notext" data-bind="click: closePollConfirm, visible: status() === 'open' && votes().length > 0">
+      <button data-icon="lock" data-iconpos="notext" data-bind="click: closePoll, visible: status() === 'open' && votes().length > 0">
+        Close
+      </button>
+      <button data-icon="lock-open" data-iconpos="notext" data-bind="click: reopenPoll, visible: status() === 'closed' && votes().length > 0">
         Close
       </button>
       <button data-icon="trash" data-iconpos="notext" data-bind="click: deletePollConfirm">Delete</button>
