Prep for release 0.4.2

--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,9 @@
     * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
 -->
 
-<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-eval' data: gap: https://ssl.gstatic.com ws://192.168.1.69:3883 http://192.168.1.69:3883; style-src 'self' 'unsafe-inline'; media-src *">
+<!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-eval' data: gap: https://ssl.gstatic.com ws://192.168.1.69:3883 http://192.168.1.69:3883; style-src 'self' 'unsafe-inline'; media-src *">-->
 
-<!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-eval' data: gap: https://ssl.gstatic.com ws://votingthing.com:3883 http://votingthing.com:3883; style-src 'self' 'unsafe-inline'; media-src *">-->
+<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-eval' data: gap: https://ssl.gstatic.com ws://votingthing.com:3883 http://votingthing.com:3883; style-src 'self' 'unsafe-inline'; media-src *">
 
 <title>Voting Thing</title>
 <link rel="stylesheet" href="css/all.min.css">
