--- a/html/index.html
+++ b/html/index.html
@@ -156,9 +156,9 @@
     <button data-theme="b">Create Poll</button>
   </form>
 </div>
-<div data-bind="foreach: groupedPolls">
+<div id="poll-group-container" data-bind="foreach: groupedPolls">
   <h3 data-bind="text: $data[0] && $data[0].poll_date"></h3>
-  <div data-bind="template: {name: 'poll-template', foreach: $data}, jqmEnhancePollList: $data"></div>
+  <div data-bind="template: {name: 'poll-template', foreach: $data}"></div>
 </div>
 </script>
 
