Set user-scalable=no in viewport.

--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset="UTF-8">
-<meta name=viewport content="width=device-width, initial-scale=1">
+<meta name=viewport content="width=device-width, initial-scale=1, user-scalable=no">
 <!--
     * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
     * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
